--- a/css/contacts.css
+++ b/css/contacts.css
@@ -68,4 +68,57 @@ ul {
       -ms-flex-align: center;
           align-items: center;
 }
+
+a.log-out:hover {
+  font-weight: bold;
+}
+
+a.log-out:visited {
+  color: black;
+}
+
+.bg-modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: none;
+}
+
+.modal-content {
+  width: 500px;
+  height: 300px;
+  background-color: white;
+  border-radius: 4px;
+  text-align: center;
+  padding: 0;
+  position: relative;
+}
+
+input {
+  width: 50%;
+  display: block;
+  margin: 15px auto;
+}
+
+.close {
+  position: absolute;
+  top: -15px;
+  right: 5px;
+  font-size: 40px;
+  font-weight: 300;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  cursor: pointer;
+}
 /*# sourceMappingURL=contacts.css.map */
