Added initials for contact profile picture

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 :root {
   --primary-color: #A33838;
 }
@@ -120,5 +120,13 @@ input {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   cursor: pointer;
+}
+
+.initials {
+  position: relative;
+  top: -285px;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 300;
 }
 /*# sourceMappingURL=contacts.css.map */
