--- a/css/main.scss
+++ b/css/main.scss
@@ -1,8 +1,51 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+:root
+{
+    --primary-color: #A33838;
+}
+
 body 
 {
-    background-color: rgb(163, 56, 56);
-    font-family: 'Open Sans';
+    background-color: var(--primary-color);
+    margin: 0;
+    font-family: 'Poppins';
+}
+
+.navbar
+{
+    background: white;
+    padding: 1em;
+
+    .logo
+    {
+        text-decoration: none;
+        font-weight: 600;
+        color: black;
+        font-size: 1.5em;
+
+        span 
+        {
+            color: var(--primary-color);
+        }
+    }
+
+    nav
+    {
+        padding-top: 0.25em;
+
+        .log-out
+        {
+            font-size: 1em;
+            text-decoration: none;
+        }
+        
+    }
+
+    .container
+    {
+        display: flex;
+        place-content: space-between;
+    }
 }
 
 .login-section
@@ -40,7 +83,7 @@ label
 
 .login-cta
 {
-    background-color: rgb(163, 56, 56);
+    background-color: var(--primary-color);
     color: white;
     display: block;
     margin: 0 auto;
