Added fancy schmancy animations

--- a/css/main.css
+++ b/css/main.css
@@ -47,8 +47,28 @@ body {
   width: 450px;
   padding: 2em 2em;
   margin: auto;
-  margin-top: 10em;
+  margin-top: 8em;
   border-radius: .6em 1.2em;
+  -webkit-animation: fadeIn 2s;
+          animation: fadeIn 2s;
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 h2 {
