--- a/css/contacts.scss
+++ b/css/contacts.scss
@@ -139,3 +139,42 @@ input
     font-weight: 300;
 }
 
+
+.contacts-table
+{
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    min-width: 400px;
+
+    tbody, tr 
+    {
+        border-bottom: 1px solid #b6b6b6;
+    }
+
+    td 
+    {
+        padding-right: 100px;
+    }
+
+    .contacts-body
+    {
+        td.profile-pic
+        {
+            h4.initials-item 
+            {
+                position: relative;
+                text-align: center;
+                margin: 0;
+                top: -26px;
+            }
+
+            svg.circle-svg
+            {
+                position: relative;
+                top: 10px;
+            }
+        }
+    }
+}
+
