--- a/css/contacts.css
+++ b/css/contacts.css
@@ -34,17 +34,19 @@ body {
   text-decoration: none;
 }
 
+.navbar nav a.log-out:hover {
+  font-weight: bold;
+}
+
+.navbar nav a.log-out:visited {
+  color: black;
+}
+
 .navbar .container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   place-content: space-between;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
 }
 
 .contacts {
@@ -69,14 +71,6 @@ ul {
           align-items: center;
 }
 
-a.log-out:hover {
-  font-weight: bold;
-}
-
-a.log-out:visited {
-  color: black;
-}
-
 .bg-modal {
   width: 100%;
   height: 100%;
@@ -95,7 +89,7 @@ a.log-out:visited {
   display: none;
 }
 
-.modal-content {
+.bg-modal .modal-content {
   width: 500px;
   height: 300px;
   background-color: white;
@@ -105,13 +99,7 @@ a.log-out:visited {
   position: relative;
 }
 
-input {
-  width: 50%;
-  display: block;
-  margin: 15px auto;
-}
-
-.close {
+.bg-modal .modal-content .close {
   position: absolute;
   top: -15px;
   right: 5px;
@@ -122,12 +110,61 @@ input {
   cursor: pointer;
 }
 
-.initials {
+.bg-modal .modal-content input {
+  width: 50%;
+  display: block;
+  margin: 15px auto;
+}
+
+.bg-modal .modal-content .initials {
   position: relative;
   top: -285px;
   text-align: center;
   font-size: 30px;
   font-weight: 300;
+}
+
+.bg-modal-confirm-delete {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: none;
+}
+
+.bg-modal-confirm-delete .confirm-delete-content {
+  width: 400px;
+  height: 150px;
+  background-color: white;
+  border-radius: 4px;
+  text-align: center;
+  padding: 0;
+  position: relative;
+}
+
+.bg-modal-confirm-delete .confirm-delete-content h1 {
+  color: #c72c2c;
+}
+
+.bg-modal-confirm-delete .confirm-delete-content .confirm-delete-close {
+  position: absolute;
+  top: -15px;
+  right: 5px;
+  font-size: 40px;
+  font-weight: 300;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  cursor: pointer;
 }
 
 .contacts-table {
