--- a/css/contacts.scss
+++ b/css/contacts.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+// =============================================================================
+// Body:
+// =============================================================================
+
 :root
 {
     --primary-color: #A33838;
@@ -11,6 +15,10 @@ body
     margin: 0;
     font-family: 'Poppins';
 }
+
+// =============================================================================
+// Navigation bar:
+// =============================================================================
 
 .navbar
 {
@@ -39,7 +47,16 @@ body
             font-size: 1em;
             text-decoration: none;
         }
-        
+
+        a.log-out:hover
+        {
+            font-weight: bold;
+        }
+
+        a.log-out:visited
+        {
+            color: black;
+        }
     }
 
     .container
@@ -49,12 +66,9 @@ body
     }
 }
 
-ul
-{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
+// =============================================================================
+// Contacts header bar:
+// =============================================================================
 
 .contacts
 {
@@ -77,15 +91,9 @@ ul
     }
 }
 
-a.log-out:hover
-{
-    font-weight: bold;
-}
-
-a.log-out:visited
-{
-    color: black;
-}
+// =============================================================================
+// Contact field popup:
+// =============================================================================
 
 .bg-modal
 {
@@ -98,47 +106,93 @@ a.log-out:visited
     justify-content: center;
     align-items: center;
     display: none;
+
+    .modal-content
+    {
+        width: 500px;
+        height: 300px;
+        background-color: white;
+        border-radius: 4px;
+        text-align: center;
+        padding: 0;
+        position: relative;
+
+        .close
+        {
+            position: absolute;
+            top: -15px;
+            right: 5px;
+            font-size: 40px;
+            font-weight: 300;
+            transform: rotate(45deg);
+            cursor: pointer;
+        }
+
+        input
+        {
+            width: 50%;
+            display: block;
+            margin: 15px auto;
+        }
+
+        .initials
+        {
+            position: relative;
+            top: -285px;
+            text-align: center;
+            font-size: 30px;
+            font-weight: 300;
+        }
+    }
 }
 
-.modal-content
-{
-    width: 500px;
-    height: 300px;
-    background-color: white;
-    border-radius: 4px;
-    text-align: center;
-    padding: 0;
-    position: relative;
-    
-}
+// =============================================================================
+// Contact confirm delete popup:
+// =============================================================================
 
-input
+.bg-modal-confirm-delete
 {
-    width: 50%;
-    display: block;
-    margin: 15px auto;
-}
-
-.close
-{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
     position: absolute;
-    top: -15px;
-    right: 5px;
-    font-size: 40px;
-    font-weight: 300;
-    transform: rotate(45deg);
-    cursor: pointer;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+
+    .confirm-delete-content
+    {
+        width: 400px;
+        height: 150px;
+        background-color: white;
+        border-radius: 4px;
+        text-align: center;
+        padding: 0;
+        position: relative;
+
+        h1 
+        {
+            color: rgb(199, 44, 44);
+        }
+
+        .confirm-delete-close
+        {
+            position: absolute;
+            top: -15px;
+            right: 5px;
+            font-size: 40px;
+            font-weight: 300;
+            transform: rotate(45deg);
+            cursor: pointer;
+        }
+    }
 }
 
-.initials
-{
-    position: relative;
-    top: -285px;
-    text-align: center;
-    font-size: 30px;
-    font-weight: 300;
-}
-
+// =============================================================================
+// Contact table:
+// =============================================================================
 
 .contacts-table
 {
