--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ body {
 
 .login-section {
   background-color: white;
-  height: 350px;
+  height: 360px;
   width: 450px;
   padding: 2em 2em;
   margin: auto;
@@ -100,21 +100,21 @@ label {
   border-radius: 5em;
 }
 
+#loginResult {
+  height: 25px;
+  width: 450px;
+  text-align: center;
+  color: red;
+  display: block;
+  margin: auto;
+  margin-top: .5em;
+}
+
 p {
   text-align: center;
 }
 
 a {
   color: gray;
-}
-
-#loginResult {
-  display: inline-block;
-  font-size: 0.8em;
-  width: 90%;
-  text-align: center;
-  margin-left: 5%;
-  margin-bottom: 2%;
-  color: #95060a;
 }
 /*# sourceMappingURL=main.css.map */
