--- a/css/reg.css
+++ b/css/reg.css
@@ -51,6 +51,7 @@ body {
   border-radius: .6em 1.2em;
   -webkit-animation: fadeIn 2s;
           animation: fadeIn 2s;
+  z-index: 1;
 }
 
 @-webkit-keyframes fadeIn {
@@ -100,8 +101,19 @@ label {
   border-radius: 5em;
 }
 
+#registerResult {
+  height: 25px;
+  width: 450px;
+  text-align: center;
+  color: red;
+  display: block;
+  margin: auto;
+  margin-top: 1em;
+}
+
 p {
   text-align: center;
+  margin-top: 1.5em;
 }
 
 a {
