--- a/css/reg.scss
+++ b/css/reg.scss
@@ -62,6 +62,7 @@ body
     margin-top: 8em;
     border-radius: .6em 1.2em;
     animation: fadeIn 2s;
+    z-index: 1;
 }
 
 @keyframes fadeIn
@@ -104,9 +105,21 @@ label
     border-radius: 5em;
 }
 
+#registerResult
+{
+    height: 25px;
+    width: 450px;
+    text-align: center;
+    color: red;
+    display: block;
+    margin: auto;
+    margin-top: 1em;
+}
+
 p
 {
-    text-align: center;  
+    text-align: center;
+    margin-top: 1.5em;
 }
 
 a
