--- a/css/contacts.css
+++ b/css/contacts.css
@@ -153,7 +153,7 @@ body {
 }
 
 .bg-modal-confirm-delete .confirm-delete-content h1 {
-  color: #c72c2c;
+  color: var(--primary-color);
 }
 
 .bg-modal-confirm-delete .confirm-delete-content .confirm-delete-close {
@@ -169,17 +169,21 @@ body {
 
 .contacts-table {
   border-collapse: collapse;
-  margin: 25px 0;
   font-size: 0.9em;
-  min-width: 400px;
+  width: 100%;
 }
 
 .contacts-table tbody, .contacts-table tr {
-  border-bottom: 1px solid #b6b6b6;
+  border: 1px solid #b6b6b6;
 }
 
-.contacts-table td {
-  padding-right: 100px;
+.contacts-table td, .contacts-table th {
+  padding-right: 12px 15px;
+  text-align: center;
+}
+
+.contacts-table .contacts-body tr:hover {
+  background-color: rgba(204, 204, 204, 0.39);
 }
 
 .contacts-table .contacts-body td.profile-pic h4.initials-item {
@@ -192,5 +196,28 @@ body {
 .contacts-table .contacts-body td.profile-pic svg.circle-svg {
   position: relative;
   top: 10px;
+}
+
+@media (max-width: 828px) {
+  .contacts-table {
+    display: none;
+  }
+  .contacts-table, tbody, tr, td {
+    display: block;
+    width: 100%;
+  }
+  .contacts-table .contacts-head, tbody .contacts-head, tr .contacts-head, td .contacts-head {
+    display: none;
+  }
+  td {
+    padding-bottom: 10px;
+  }
+  .contacts {
+    padding: 0.5em;
+    margin: 0.5em 5em;
+  }
+  .contacts .container h1 {
+    font-size: 1em;
+  }
 }
 /*# sourceMappingURL=contacts.css.map */
