--- a/css/contacts.scss
+++ b/css/contacts.scss
@@ -174,7 +174,7 @@ body
 
         h1 
         {
-            color: rgb(199, 44, 44);
+            color: var(--primary-color);
         }
 
         .confirm-delete-close
@@ -197,22 +197,27 @@ body
 .contacts-table
 {
     border-collapse: collapse;
-    margin: 25px 0;
     font-size: 0.9em;
-    min-width: 400px;
+    width: 100%;
 
     tbody, tr 
     {
-        border-bottom: 1px solid #b6b6b6;
+        border: 1px solid #b6b6b6;
     }
 
-    td 
+    td, th 
     {
-        padding-right: 100px;
+        padding-right: 12px 15px;
+        text-align: center;
     }
 
     .contacts-body
     {
+        tr:hover
+        {
+            background-color: rgba(204, 204, 204, 0.39);
+        }
+
         td.profile-pic
         {
             h4.initials-item 
@@ -230,5 +235,44 @@ body
             }
         }
     }
+}
+
+@media(max-width: 828px)
+{
+    .contacts-table 
+    {
+        display: none;
+    }
+
+    .contacts-table, tbody, tr, td 
+    {
+        display: block;
+        width: 100%;
+
+        .contacts-head
+        {
+            display: none;
+        }
+    }
+
+    td 
+    {
+        padding-bottom: 10px;
+    }
+
+    .contacts
+    {
+        padding: 0.5em;
+        margin: 0.5em 5em;
+
+        .container
+        {
+            h1 
+            {
+                font-size: 1em;
+            }
+        }
+    }
+
 }
 
