--- a/css/contacts.css
+++ b/css/contacts.css
@@ -162,6 +162,10 @@ body {
   font-weight: 300;
 }
 
+.bg-modal .modal-content .done-button {
+  font-family: Poppins;
+}
+
 .bg-modal-confirm-delete {
   width: 100%;
   height: 100%;
@@ -203,6 +207,10 @@ body {
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
   cursor: pointer;
+}
+
+.bg-modal-confirm-delete .confirm-delete-content .confirm-button {
+  font-family: Poppins;
 }
 
 .contacts-table {
