--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ label {
 
 #loginResult {
   height: 25px;
-  width: 450px;
+  width: 250px;
   text-align: center;
   color: red;
   display: block;
@@ -120,7 +120,8 @@ a {
 
 @media (max-width: 889px) {
   .login-section {
-    width: 350px;
+    width: 250px;
+    height: 450px;
   }
 }
 /*# sourceMappingURL=main.css.map */
