--- a/css/main.scss
+++ b/css/main.scss
@@ -104,7 +104,7 @@ label
 #loginResult
 {
     height: 25px;
-    width: 450px;
+    width: 250px;
     text-align: center;
     color: red;
     display: block;
@@ -122,12 +122,12 @@ a
     color: gray;
 }
 
-
 @media(max-width: 889px)
 {
     .login-section
     {
-        width: 300px;
+        width: 250px;
+        height: 450px;
     }
 }
 
