--- a/css/reg.css
+++ b/css/reg.css
@@ -103,7 +103,7 @@ label {
 
 #registerResult {
   height: 25px;
-  width: 450px;
+  width: 250px;
   text-align: center;
   color: red;
   display: block;
@@ -123,6 +123,7 @@ a {
 @media (max-width: 889px) {
   .register-section {
     width: 300px;
+    height: 720px;
   }
 }
 /*# sourceMappingURL=reg.css.map */
