--- a/css/reg.scss
+++ b/css/reg.scss
@@ -108,7 +108,7 @@ label
 #registerResult
 {
     height: 25px;
-    width: 450px;
+    width: 250px;
     text-align: center;
     color: red;
     display: block;
@@ -132,6 +132,7 @@ a
     .register-section
     {
         width: 300px;
+        height: 720px;
     }
 }
 
