--- a/css/contacts.css
+++ b/css/contacts.css
@@ -7,42 +7,35 @@
 body {
   background: var(--primary-color);
   margin: 0;
-  font-family: 'Poppins';
+  font-family: "Poppins";
 }
 
 .navbar {
   background: white;
   padding: 1em;
 }
-
 .navbar .logo {
   text-decoration: none;
   font-weight: 600;
   color: black;
   font-size: 1.5em;
 }
-
 .navbar .logo span {
   color: var(--primary-color);
 }
-
 .navbar nav {
   padding-top: 0.25em;
 }
-
 .navbar nav .log-out {
   font-size: 1em;
   text-decoration: none;
 }
-
 .navbar nav a.log-out:hover {
   font-weight: bold;
 }
-
 .navbar nav a.log-out:visited {
   color: black;
 }
-
 .navbar .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -59,13 +52,11 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
-
 .contacts h1 {
   font-size: 27px;
   font-weight: normal;
   vertical-align: top;
 }
-
 .contacts .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -77,7 +68,6 @@ body {
   height: 60px;
   width: 100%;
 }
-
 .contacts .container .search .search-bar {
   height: 24px;
   width: 350px;
@@ -85,7 +75,6 @@ body {
   font-size: 13px;
   margin: 5px 0;
 }
-
 .contacts .container .search .search-bar::-webkit-input-placeholder {
   font-family: FontAwesome, Poppins;
   font-weight: lighter;
@@ -95,7 +84,6 @@ body {
   display: inline-block !important;
   color: rgba(204, 204, 204, 0.815);
 }
-
 .contacts .container .search .search-button {
   margin: 5px 0;
   padding: 1px 5px;
@@ -103,7 +91,6 @@ body {
   vertical-align: top;
   font-family: Poppins;
 }
-
 .contacts .container img {
   height: 20px;
   vertical-align: center;
@@ -126,7 +113,6 @@ body {
           align-items: center;
   display: none;
 }
-
 .bg-modal .modal-content {
   width: 500px;
   height: 300px;
@@ -136,7 +122,6 @@ body {
   padding: 0;
   position: relative;
 }
-
 .bg-modal .modal-content .close {
   position: absolute;
   top: -15px;
@@ -147,13 +132,11 @@ body {
           transform: rotate(45deg);
   cursor: pointer;
 }
-
 .bg-modal .modal-content input {
   width: 50%;
   display: block;
   margin: 15px auto;
 }
-
 .bg-modal .modal-content .initials {
   position: relative;
   top: -285px;
@@ -161,8 +144,59 @@ body {
   font-size: 30px;
   font-weight: 300;
 }
-
 .bg-modal .modal-content .done-button {
+  font-family: Poppins;
+}
+
+.edit-bg-modal {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: none;
+}
+.edit-bg-modal .edit-modal-content {
+  width: 500px;
+  height: 300px;
+  background-color: white;
+  border-radius: 4px;
+  text-align: center;
+  padding: 0;
+  position: relative;
+}
+.edit-bg-modal .edit-modal-content .edit-close {
+  position: absolute;
+  top: -15px;
+  right: 5px;
+  font-size: 40px;
+  font-weight: 300;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  cursor: pointer;
+}
+.edit-bg-modal .edit-modal-content input {
+  width: 50%;
+  display: block;
+  margin: 15px auto;
+}
+.edit-bg-modal .edit-modal-content .edit-initials {
+  position: relative;
+  top: -285px;
+  text-align: center;
+  font-size: 30px;
+  font-weight: 300;
+}
+.edit-bg-modal .edit-modal-content .edit-done-button {
   font-family: Poppins;
 }
 
@@ -183,7 +217,6 @@ body {
           align-items: center;
   display: none;
 }
-
 .bg-modal-confirm-delete .confirm-delete-content {
   width: 400px;
   height: 150px;
@@ -193,11 +226,9 @@ body {
   padding: 0;
   position: relative;
 }
-
 .bg-modal-confirm-delete .confirm-delete-content h1 {
   color: var(--primary-color);
 }
-
 .bg-modal-confirm-delete .confirm-delete-content .confirm-delete-close {
   position: absolute;
   top: -15px;
@@ -208,7 +239,6 @@ body {
           transform: rotate(45deg);
   cursor: pointer;
 }
-
 .bg-modal-confirm-delete .confirm-delete-content .confirm-button {
   font-family: Poppins;
 }
@@ -218,33 +248,31 @@ body {
   font-size: 0.9em;
   width: 100%;
 }
-
 .contacts-table tbody, .contacts-table tr {
   border: 1px solid #b6b6b6;
 }
-
 .contacts-table td, .contacts-table th {
   padding-right: 12px 15px;
   text-align: center;
 }
-
 .contacts-table .contacts-body tr:hover {
   background-color: rgba(204, 204, 204, 0.39);
 }
-
 .contacts-table .contacts-body td.profile-pic h4.initials-item {
   position: relative;
   text-align: center;
   margin: 0;
   top: -26px;
 }
-
 .contacts-table .contacts-body td.profile-pic svg.circle-svg {
   position: relative;
   top: 10px;
 }
-
 .contacts-table .contacts-body .delete-btn button {
+  height: 30px;
+  font-family: Poppins;
+}
+.contacts-table .contacts-body .edit-btn button {
   height: 30px;
   font-family: Poppins;
 }
@@ -253,6 +281,7 @@ body {
   .contacts-table {
     display: none;
   }
+
   .contacts-table, tbody, tr, td {
     display: block;
     width: 100%;
@@ -260,9 +289,11 @@ body {
   .contacts-table .contacts-head, tbody .contacts-head, tr .contacts-head, td .contacts-head {
     display: none;
   }
+
   td {
     padding-bottom: 10px;
   }
+
   .contacts {
     padding: 0.5em;
     margin: 0.5em 1em;
@@ -274,4 +305,3 @@ body {
     width: 150px;
   }
 }
-/*# sourceMappingURL=contacts.css.map */
