--- a/css/contacts.scss
+++ b/css/contacts.scss
@@ -195,6 +195,66 @@ body
 }
 
 // =============================================================================
+// Edit contact field popup:
+// =============================================================================
+
+.edit-bg-modal
+{
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+
+    .edit-modal-content
+    {
+        width: 500px;
+        height: 300px;
+        background-color: white;
+        border-radius: 4px;
+        text-align: center;
+        padding: 0;
+        position: relative;
+
+        .edit-close
+        {
+            position: absolute;
+            top: -15px;
+            right: 5px;
+            font-size: 40px;
+            font-weight: 300;
+            transform: rotate(45deg);
+            cursor: pointer;
+        }
+
+        input
+        {
+            width: 50%;
+            display: block;
+            margin: 15px auto;
+        }
+
+        .edit-initials
+        {
+            position: relative;
+            top: -285px;
+            text-align: center;
+            font-size: 30px;
+            font-weight: 300;
+        }
+
+        .edit-done-button
+        {
+            font-family: Poppins;
+        }
+    }
+}
+
+// =============================================================================
 // Contact confirm delete popup:
 // =============================================================================
 
@@ -296,6 +356,15 @@ body
                 font-family: Poppins;
             }
             
+        }
+
+        .edit-btn
+        {
+            button 
+            {
+                height: 30px;
+                font-family: Poppins;
+            }
         }
     }
 }
