--- a/css/contacts.css
+++ b/css/contacts.css
@@ -9,36 +9,43 @@
 body {
   background: var(--primary-color);
   margin: 0;
-  font-family: "Poppins";
+  font-family: 'Poppins';
 }
 
 .navbar {
   background: var(--secondary-color);
   padding: 1em;
 }
+
 .navbar .logo {
   text-decoration: none;
   font-weight: 600;
   color: var(--white);
   font-size: 1.5em;
 }
+
 .navbar .logo span {
   color: var(--primary-color);
 }
+
 .navbar nav {
   padding-top: 0.25em;
 }
+
 .navbar nav .log-out {
   font-size: 1em;
   text-decoration: none;
   color: var(--white);
 }
+
 .navbar nav a.log-out:hover {
   font-weight: bold;
 }
+
 .navbar nav a.log-out:visited {
   color: var(--white);
 }
+
 .navbar .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -60,12 +67,14 @@ body {
   border-radius: 1rem;
   border-style: solid;
 }
+
 .contacts h1 {
   font-size: 27px;
   font-weight: normal;
   vertical-align: top;
   color: var(--white);
 }
+
 .contacts .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -77,6 +86,7 @@ body {
   height: 60px;
   width: 100%;
 }
+
 .contacts .container .search .search-bar {
   height: 24px;
   width: 350px;
@@ -84,6 +94,7 @@ body {
   font-size: 13px;
   margin: 5px 0;
 }
+
 .contacts .container .search .search-bar::-webkit-input-placeholder {
   font-family: FontAwesome, Poppins;
   font-weight: lighter;
@@ -93,6 +104,7 @@ body {
   display: inline-block !important;
   color: rgba(204, 204, 204, 0.815);
 }
+
 .contacts .container .search .search-button {
   margin: 5px 0;
   padding: 1px 5px;
@@ -100,6 +112,7 @@ body {
   vertical-align: top;
   font-family: Poppins;
 }
+
 .contacts .container img {
   height: 20px;
   vertical-align: center;
@@ -122,6 +135,7 @@ body {
           align-items: center;
   display: none;
 }
+
 .bg-modal .modal-content {
   width: 500px;
   height: 300px;
@@ -131,6 +145,7 @@ body {
   padding: 0;
   position: relative;
 }
+
 .bg-modal .modal-content .close {
   position: absolute;
   top: -15px;
@@ -141,11 +156,13 @@ body {
           transform: rotate(45deg);
   cursor: pointer;
 }
+
 .bg-modal .modal-content input {
   width: 50%;
   display: block;
   margin: 15px auto;
 }
+
 .bg-modal .modal-content .initials {
   position: relative;
   top: -285px;
@@ -153,6 +170,7 @@ body {
   font-size: 30px;
   font-weight: 300;
 }
+
 .bg-modal .modal-content .done-button {
   font-family: Poppins;
 }
@@ -174,6 +192,7 @@ body {
           align-items: center;
   display: none;
 }
+
 .edit-bg-modal .edit-modal-content {
   width: 500px;
   height: 300px;
@@ -183,6 +202,7 @@ body {
   padding: 0;
   position: relative;
 }
+
 .edit-bg-modal .edit-modal-content .edit-close {
   position: absolute;
   top: -15px;
@@ -193,11 +213,13 @@ body {
           transform: rotate(45deg);
   cursor: pointer;
 }
+
 .edit-bg-modal .edit-modal-content input {
   width: 50%;
   display: block;
   margin: 15px auto;
 }
+
 .edit-bg-modal .edit-modal-content .edit-initials {
   position: relative;
   top: -285px;
@@ -205,6 +227,7 @@ body {
   font-size: 30px;
   font-weight: 300;
 }
+
 .edit-bg-modal .edit-modal-content .edit-done-button {
   font-family: Poppins;
 }
@@ -226,6 +249,7 @@ body {
           align-items: center;
   display: none;
 }
+
 .bg-modal-confirm-delete .confirm-delete-content {
   width: 400px;
   height: 150px;
@@ -235,9 +259,11 @@ body {
   padding: 0;
   position: relative;
 }
+
 .bg-modal-confirm-delete .confirm-delete-content h1 {
   color: var(--primary-color);
 }
+
 .bg-modal-confirm-delete .confirm-delete-content .confirm-delete-close {
   position: absolute;
   top: -15px;
@@ -248,6 +274,7 @@ body {
           transform: rotate(45deg);
   cursor: pointer;
 }
+
 .bg-modal-confirm-delete .confirm-delete-content .confirm-button {
   font-family: Poppins;
 }
@@ -257,30 +284,37 @@ body {
   font-size: 0.9em;
   width: 100%;
 }
+
 .contacts-table tbody, .contacts-table tr {
   border: 1px solid #b6b6b6;
 }
+
 .contacts-table td, .contacts-table th {
   padding-right: 12px 15px;
   text-align: center;
 }
+
 .contacts-table .contacts-body tr:hover {
   background-color: rgba(204, 204, 204, 0.39);
 }
+
 .contacts-table .contacts-body td.profile-pic h4.initials-item {
   position: relative;
   text-align: center;
   margin: 0;
   top: -26px;
 }
+
 .contacts-table .contacts-body td.profile-pic svg.circle-svg {
   position: relative;
   top: 10px;
 }
+
 .contacts-table .contacts-body .delete-btn button {
   height: 30px;
   font-family: Poppins;
 }
+
 .contacts-table .contacts-body .edit-btn button {
   height: 30px;
   font-family: Poppins;
@@ -290,7 +324,6 @@ body {
   .contacts-table {
     display: none;
   }
-
   .contacts-table, tbody, tr, td {
     display: block;
     width: 100%;
@@ -298,11 +331,9 @@ body {
   .contacts-table .contacts-head, tbody .contacts-head, tr .contacts-head, td .contacts-head {
     display: none;
   }
-
   td {
     padding-bottom: 10px;
   }
-
   .contacts {
     padding: 0.5em;
     margin: 0.5em 1em;
@@ -314,3 +345,4 @@ body {
     width: 150px;
   }
 }
+/*# sourceMappingURL=contacts.css.map */
