--- a/css/reg.css
+++ b/css/reg.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 :root {
-  --primary-color: #A33838;
+  --primary-color: #7B8FB0;
+  --secondary-color: #202733;
+  --white: #fff;
 }
 
 body {
@@ -10,14 +12,14 @@ body {
 }
 
 .navbar {
-  background: white;
+  background: var(--secondary-color);
   padding: 1em;
 }
 
 .navbar .logo {
   text-decoration: none;
   font-weight: 600;
-  color: black;
+  color: var(--white);
   font-size: 1.5em;
 }
 
@@ -42,13 +44,17 @@ body {
 }
 
 .register-section {
-  background-color: white;
+  background-color: var(--secondary-color);
   height: 620px;
   width: 450px;
   padding: 2em 2em;
   margin: auto;
   margin-top: 8em;
   border-radius: .6em 1.2em;
+  border-color: var(--white);
+  border-width: 0.5rem;
+  border-radius: 1rem;
+  border-style: solid;
   -webkit-animation: fadeIn 2s;
           animation: fadeIn 2s;
   z-index: 1;
@@ -74,6 +80,7 @@ body {
 
 h2 {
   font-size: 2em;
+  color: var(--white);
   text-align: center;
   margin-top: 0em;
 }
@@ -81,6 +88,7 @@ h2 {
 label {
   text-align: center;
   display: block;
+  color: var(--white);
   margin-top: 2em;
 }
 
