--- a/css/reg.scss
+++ b/css/reg.scss
@@ -4,7 +4,9 @@
 // Implement global color.
 :root
 {
-    --primary-color: #A33838;
+    --primary-color: #7B8FB0;
+    --secondary-color: #202733;
+    --white: #fff;
 }
 
 body 
@@ -16,14 +18,14 @@ body
 
 .navbar
 {
-    background: white;
+    background: var(--secondary-color);
     padding: 1em;
 
     .logo
     {
         text-decoration: none;
         font-weight: 600;
-        color: black;
+        color: var(--white);
         font-size: 1.5em;
 
         span 
@@ -54,13 +56,17 @@ body
 .register-section
 {
 
-    background-color: white;
+    background-color: var(--secondary-color);
     height:620px;
     width: 450px;
     padding: 2em 2em;
     margin: auto;
     margin-top: 8em;
     border-radius: .6em 1.2em;
+    border-color: var(--white);
+    border-width: 0.5rem;
+    border-radius: 1rem;
+    border-style: solid;
     animation: fadeIn 2s;
     z-index: 1;
 }
@@ -74,6 +80,7 @@ body
 h2
 {
     font-size: 2em;
+    color: var(--white);
     text-align: center;
     margin-top: 0em;
 }
@@ -82,6 +89,7 @@ label
 {
     text-align: center;
     display: block;
+    color: var(--white);
     margin-top: 2em;
 }
 
