--- a/css/contacts.css
+++ b/css/contacts.css
@@ -9,43 +9,36 @@
 body {
   background: var(--primary-color);
   margin: 0;
-  font-family: 'Poppins';
+  font-family: "Poppins";
 }
 
 .navbar {
   background: var(--secondary-color);
   padding: 1em;
 }
-
 .navbar .logo {
   text-decoration: none;
   font-weight: 600;
   color: var(--white);
   font-size: 1.5em;
 }
-
 .navbar .logo span {
   color: var(--primary-color);
 }
-
 .navbar nav {
   padding-top: 0.25em;
 }
-
 .navbar nav .log-out {
   font-size: 1em;
   text-decoration: none;
   color: var(--white);
 }
-
 .navbar nav a.log-out:hover {
   font-weight: bold;
 }
-
 .navbar nav a.log-out:visited {
   color: var(--white);
 }
-
 .navbar .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -63,18 +56,16 @@ body {
           align-items: center;
   color: var(--white);
   border-color: var(--white);
-  border-width: 0.5rem;
+  border-width: 0.2rem;
   border-radius: 1rem;
   border-style: solid;
 }
-
 .contacts h1 {
   font-size: 27px;
   font-weight: normal;
   vertical-align: top;
   color: var(--white);
 }
-
 .contacts .container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -86,7 +77,6 @@ body {
   height: 60px;
   width: 100%;
 }
-
 .contacts .container .search .search-bar {
   height: 24px;
   width: 350px;
@@ -94,7 +84,6 @@ body {
   font-size: 13px;
   margin: 5px 0;
 }
-
 .contacts .container .search .search-bar::-webkit-input-placeholder {
   font-family: FontAwesome, Poppins;
   font-weight: lighter;
@@ -104,7 +93,6 @@ body {
   display: inline-block !important;
   color: rgba(204, 204, 204, 0.815);
 }
-
 .contacts .container .search .search-button {
   margin: 5px 0;
   padding: 1px 5px;
@@ -112,7 +100,6 @@ body {
   vertical-align: top;
   font-family: Poppins;
 }
-
 .contacts .container img {
   height: 20px;
   vertical-align: center;
@@ -135,7 +122,6 @@ body {
           align-items: center;
   display: none;
 }
-
 .bg-modal .modal-content {
   width: 500px;
   height: 300px;
@@ -145,7 +131,6 @@ body {
   padding: 0;
   position: relative;
 }
-
 .bg-modal .modal-content .close {
   position: absolute;
   top: -15px;
@@ -156,13 +141,11 @@ body {
           transform: rotate(45deg);
   cursor: pointer;
 }
-
 .bg-modal .modal-content input {
   width: 50%;
   display: block;
   margin: 15px auto;
 }
-
 .bg-modal .modal-content .initials {
   position: relative;
   top: -285px;
@@ -170,7 +153,6 @@ body {
   font-size: 30px;
   font-weight: 300;
 }
-
 .bg-modal .modal-content .done-button {
   font-family: Poppins;
 }
@@ -192,7 +174,6 @@ body {
           align-items: center;
   display: none;
 }
-
 .edit-bg-modal .edit-modal-content {
   width: 500px;
   height: 300px;
@@ -202,7 +183,6 @@ body {
   padding: 0;
   position: relative;
 }
-
 .edit-bg-modal .edit-modal-content .edit-close {
   position: absolute;
   top: -15px;
@@ -213,13 +193,11 @@ body {
           transform: rotate(45deg);
   cursor: pointer;
 }
-
 .edit-bg-modal .edit-modal-content input {
   width: 50%;
   display: block;
   margin: 15px auto;
 }
-
 .edit-bg-modal .edit-modal-content .edit-initials {
   position: relative;
   top: -285px;
@@ -227,7 +205,6 @@ body {
   font-size: 30px;
   font-weight: 300;
 }
-
 .edit-bg-modal .edit-modal-content .edit-done-button {
   font-family: Poppins;
 }
@@ -249,7 +226,6 @@ body {
           align-items: center;
   display: none;
 }
-
 .bg-modal-confirm-delete .confirm-delete-content {
   width: 400px;
   height: 150px;
@@ -259,11 +235,9 @@ body {
   padding: 0;
   position: relative;
 }
-
 .bg-modal-confirm-delete .confirm-delete-content h1 {
   color: var(--primary-color);
 }
-
 .bg-modal-confirm-delete .confirm-delete-content .confirm-delete-close {
   position: absolute;
   top: -15px;
@@ -274,7 +248,6 @@ body {
           transform: rotate(45deg);
   cursor: pointer;
 }
-
 .bg-modal-confirm-delete .confirm-delete-content .confirm-button {
   font-family: Poppins;
 }
@@ -284,37 +257,30 @@ body {
   font-size: 0.9em;
   width: 100%;
 }
-
 .contacts-table tbody, .contacts-table tr {
-  border: 1px solid #b6b6b6;
+  border: 0.1rem solid var(--white);
 }
-
 .contacts-table td, .contacts-table th {
   padding-right: 12px 15px;
   text-align: center;
 }
-
 .contacts-table .contacts-body tr:hover {
   background-color: rgba(204, 204, 204, 0.39);
 }
-
 .contacts-table .contacts-body td.profile-pic h4.initials-item {
   position: relative;
   text-align: center;
   margin: 0;
   top: -26px;
 }
-
 .contacts-table .contacts-body td.profile-pic svg.circle-svg {
   position: relative;
   top: 10px;
 }
-
 .contacts-table .contacts-body .delete-btn button {
   height: 30px;
   font-family: Poppins;
 }
-
 .contacts-table .contacts-body .edit-btn button {
   height: 30px;
   font-family: Poppins;
@@ -324,6 +290,7 @@ body {
   .contacts-table {
     display: none;
   }
+
   .contacts-table, tbody, tr, td {
     display: block;
     width: 100%;
@@ -331,9 +298,11 @@ body {
   .contacts-table .contacts-head, tbody .contacts-head, tr .contacts-head, td .contacts-head {
     display: none;
   }
+
   td {
     padding-bottom: 10px;
   }
+
   .contacts {
     padding: 0.5em;
     margin: 0.5em 1em;
@@ -345,4 +314,3 @@ body {
     width: 150px;
   }
 }
-/*# sourceMappingURL=contacts.css.map */
