--- a/css/contacts.scss
+++ b/css/contacts.scss
@@ -55,6 +55,7 @@ body
         a.log-out:hover
         {
             font-weight: bold;
+            cursor: pointer;
         }
 
         a.log-out:visited
